create search project and implement services

--- a/Lil.Search/appsettings.json
+++ b/Lil.Search/appsettings.json
@@ -1,10 +1,9 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+  
+    "Services": {
+      "Customers": "http://localhost:5000/",
+      "Products": "http://localhost:5100/",
+      "Sales": "http://localhost:5200/"
     },
     "Console": {
       "LogLevel": {
