--- a/Lil.Search/Properties/launchSettings.json
+++ b/Lil.Search/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:54208/",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:54208/"
     }
   },
   "profiles": {
